일본 홈페이지 명소 상세 설명 완성

--- a/스크롤_웹사이트/france.html
+++ b/스크롤_웹사이트/france.html
@@ -504,7 +504,12 @@
   <!-- 네비게이션 -->
   <nav class="navbar">
     <div class="nav-container">
-      <div class="logo">🇫🇷 Discover France</div>
+      <div class="logo">
+        <a href="home.html" title="홈으로 이동" style="text-decoration:none;vertical-align:middle;">
+          <span style="font-size:1.5rem;vertical-align:middle;">🌍</span>
+        </a>
+        <span style="vertical-align:middle;">🇫🇷 Discover France</span>
+      </div>
       <ul class="nav-menu">
         <li class="nav-item"><a href="#home" class="nav-link">홈</a></li>
         <li class="nav-item"><a href="#regions" class="nav-link">지역</a></li>
@@ -548,7 +553,7 @@
         <div class="region-detail active" id="detail-paris">
           <div class="paris-hero">
             <div class="paris-hero-content">
-              <h1>파리에 오신 것을 환영합니다</h1>
+              <h1>파리에 오신 것을 환환합니다</h1>
               <p>예술과 낭만, 미식의 도시 파리에서 특별한 추억을 만들어보세요</p>
               <a href="#paris-intro" class="paris-cta-button">파리 탐험하기</a>
             </div>
