--- a/스크롤_웹사이트/italy.html
+++ b/스크롤_웹사이트/italy.html
@@ -455,7 +455,12 @@
   <!-- 네비게이션 -->
   <nav class="navbar">
     <div class="nav-container">
-      <div class="logo">🇮🇹 Discover Italy</div>
+      <div class="logo">
+        <a href="home.html" title="홈으로 이동" style="text-decoration:none;vertical-align:middle;">
+            <span style="font-size:1.5rem;vertical-align:middle;">🌍</span>
+        </a>
+        <span style="vertical-align:middle;">🇮🇹 Discover Italy</span>
+      </div>
       <ul class="nav-menu">
         <li class="nav-item"><a href="#home" class="nav-link">홈</a></li>
         <li class="nav-item"><a href="#regions" class="nav-link">지역</a></li>
